fix: dashboard stuck page - instal fit content action

--- a/styles/insta.module.sass
+++ b/styles/insta.module.sass
@@ -75,6 +75,8 @@
     +Hidden
   .mobileOnly
     display: block
+  .mainSectionActionButton
+    width: fit-content !important
   .main
     padding: 16px 0 0 0 !important
   .mobilePadding
